                       User-Visible wallet Changes

wallet 1.3 (xxxx-xx-xx)

    A new object type, password (Wallet::Object::Password), is now 
    supported.  This is a subclass of the file object that will randomly 
    generate content for the object if you do a get before storing any
    content inside it.

    Added an acl replace command, to change all objects owned by one ACL
    to be owned by another.

    Added a report for unstored objects to wallet-report, and cleaned up
    the help for the existing unused report that implied it showed
    unstored as well as unused.

    Took contributions from Commerzbank AG on the wallet history.  Added 
    a command to dump all object history for searching on to 
    wallet-report, and added a new script for more detailed object 
    history operations to the contrib directory.

wallet 1.2 (2014-12-08)

    The duo object type has been split into several sub-types, each for a
    specific type of Duo integration.  The old type's functionality has
    been moved to duo-pam (Wallet::Object::Duo::PAM), and new types are
    supported for Duo's auth proxy configurations for LDAP and Radius, and
    their RDP configuration.  These types are duo-radius, duo-ldap, and
    duo-rdp (Wallet::Object::Duo::RadiusProxy,
    Wallet::Object::Duo::LDAPProxy, and Wallet::Object::Duo::RDP).  The
    old duo type still exists for compatability.  To enable these object
    types for an existing wallet database, use wallet-admin to register the
    new object.

    New rename command for file type objects.  This will change the name
    of the object itself and move any stored data for the file to the
    correct location for the new name.  Currently, rename is only
    supported for file objects, but may be supported by other backends in
    the future.

wallet 1.1 (2014-07-16)

    A new object type, duo (Wallet::Object::Duo), is now supported.  This
    creates an integration with the Duo Security cloud multifactor